# Desire-Calculator

./: .gitignore  CHANGELOG.md  QUICK_START.md  README.md  USAGE_EXAMPLES.md  desires.json  main.py  pyproject.toml  requirements.txt  sample_desires.json  test_enhancements.py  test_pyqt5.py
