[project]
name = "desirecaculator"
version = "1.1.0"
description = "Advanced Personal Desire Calculator with budgeting, priorities, and categories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt5>=5.15.11",
]

[project.scripts]
desire-calculator = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]
